Add links to DUP problem reports; provided by Kelley Cook <kcook34@ford.com>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -434,7 +434,7 @@ Detailed release notes for the GCC 3.3 release follow.
 
 <h4>bootstrap failures</h4>
 <ul>
-<li><a href="http://gcc.gnu.org/PR10140">10140</a> cross compiler build failures: missing __mempcpy (DUP: 10198,10338)</li>
+<li><a href="http://gcc.gnu.org/PR10140">10140</a> cross compiler build failures: missing __mempcpy (DUP: <a href="http://gcc.gnu.org/PR10198">10198</a>,<a href="http://gcc.gnu.org/PR10338">10338</a>)</li>
 </ul>
 
 <h4>Internal compiler errors (multi-platform)</h4>
@@ -505,14 +505,14 @@ Detailed release notes for the GCC 3.3 release follow.
 
 <h4>c++ compiler and library</h4>
 <ul>
-<li><a href="http://gcc.gnu.org/PR45">45</a> legal template specialization code is rejected (DUP: 3784)</li>
-<li><a href="http://gcc.gnu.org/PR764">764</a> lookup failure: friend operator and dereferencing a pointer and templates (DUP: 5116)</li>
+<li><a href="http://gcc.gnu.org/PR45">45</a> legal template specialization code is rejected (DUP: <a href="http://gcc.gnu.org/PR3784">3784</a>)</li>
+<li><a href="http://gcc.gnu.org/PR764">764</a> lookup failure: friend operator and dereferencing a pointer and templates (DUP: <a href="http://gcc.gnu.org/PR5116">5116</a>)</li>
 <li><a href="http://gcc.gnu.org/PR2862">2862</a> gcc accepts invalid explicit instantiation syntax (DUP: 2863)</li>
 <li><a href="http://gcc.gnu.org/PR3663">3663</a> G++ doesn't check access control during template instantiation</li>
 <li><a href="http://gcc.gnu.org/PR3797">3797</a> gcc fails to emit explicit specialization of a template member</li>
 <li><a href="http://gcc.gnu.org/PR3948">3948</a> Two destructors are called when no copy destructor is defined (ABI change)</li>
 <li><a href="http://gcc.gnu.org/PR4361">4361</a> bogus ambiguity taking the address of a member template</li>
-<li><a href="http://gcc.gnu.org/PR4802">4802</a> g++ accepts illegal template code (access to private member; DUP: 5387)</li>
+<li><a href="http://gcc.gnu.org/PR4802">4802</a> g++ accepts illegal template code (access to private member; DUP: <a href="http://gcc.gnu.org/PR5837">5837</a>)</li>
 <li><a href="http://gcc.gnu.org/PR4803">4803</a> inline function is used but never defined, and g++ does not object</li>
 <li><a href="http://gcc.gnu.org/PR5730">5730</a> complex&lt;double&gt;::norm() <code>--</code> huge slowdown from egcs-2.91.66</li>
 <li><a href="http://gcc.gnu.org/PR6713">6713</a> Regression wrt 3.0.4: g++ <code>-O2</code> leads to seg fault at run time</li>
@@ -542,7 +542,7 @@ Detailed release notes for the GCC 3.3 release follow.
 <li><a href="http://gcc.gnu.org/PR9320">9320</a> Incorrect usage of <code>traits_type::int_type</code> in <code>stdio_filebuf</code></li>
 <li><a href="http://gcc.gnu.org/PR9400">9400</a> bogus <code>-Wshadow</code> warning: shadowed declaration of <code>this</code> in local classes</li>
 <li><a href="http://gcc.gnu.org/PR9424">9424</a> <code>i/ostream::operator&gt;&gt;/&lt;&lt;(streambuf*)</code> drops characters</li>
-<li><a href="http://gcc.gnu.org/PR9425">9425</a> <code>filebuf::pbackfail</code> broken (DUP: 9439)</li>
+<li><a href="http://gcc.gnu.org/PR9425">9425</a> <code>filebuf::pbackfail</code> broken (DUP: <a href="http://gcc.gnu.org/PR9439">9439</a>)</li>
 <li><a href="http://gcc.gnu.org/PR9474">9474</a> GCC freezes in compiling a weird code mixing <code>&lt;iostream&gt;</code> and <code>&lt;iostream.h&gt;</code></li>
 <li><a href="http://gcc.gnu.org/PR9548">9548</a> Incorrect results from <code>setf(ios::fixed)</code> and <code>precision(-1)</code> [DR231]</li>
 <li><a href="http://gcc.gnu.org/PR9555">9555</a> <code>ostream</code> inserters fail to set <code>badbit</code> on exception</li>
@@ -602,7 +602,7 @@ Detailed release notes for the GCC 3.3 release follow.
 <li><a href="http://gcc.gnu.org/PR7073">7073</a> bytecode interpreter gives wrong answer for interface <code>getSuperclass()</code></li>
 <li><a href="http://gcc.gnu.org/PR7180">7180</a> possible bug in <code>javax.naming.spi.NamingManager.getPlusPath()</code></li>
 <li><a href="http://gcc.gnu.org/PR7416">7416</a> <code>java.security</code> startup refs "GNU libgcj.security"</li>
-<li><a href="http://gcc.gnu.org/PR7570">7570</a> <code>Runtime.exec</code> with null envp: child doesn't inherit parent env (DUP: 7578)</li>
+<li><a href="http://gcc.gnu.org/PR7570">7570</a> <code>Runtime.exec</code> with null envp: child doesn't inherit parent env (DUP: <a href="http://gcc.gnu.org/PR7578">7578</a>)</li>
 <li><a href="http://gcc.gnu.org/PR7611">7611</a> Internal error while compiling libjava with <code>-O</code></li>
 <li><a href="http://gcc.gnu.org/PR7709">7709</a> <code>NullPointerException</code> in <code>_Jv_ResolvePoolEntry</code></li>
 <li><a href="http://gcc.gnu.org/PR7766">7766</a> <code>ZipInputStream.available</code> returns 0 immediately after construction</li>
