--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -21,7 +21,205 @@ including a list of information to include in such a report, are part of
 Installing GCC: Final Installation</a>.</p>
 
 <table>
-<tr><td></td></tr>
+
+<tr>
+<td>alpha-unknown-freebsd5.1</td>
+<td>GNU make, build in objdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00841.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>alpha-unknown-freebsd5.1</td>
+<td>GNU make, build in srcdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00853.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>alpha-unknown-freebsd5.1</td>
+<td>BSD make, build in objdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00892.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>alpha-unknown-freebsd5.1</td>
+<td>BSD make, build in srcdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00899.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>armv5l-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00878.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00939.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00924.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-unknown-freebsd4.8</td>
+<td>GNU make, build in objdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00844.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-unknown-freebsd4.8</td>
+<td>GNU make, build in srcdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00857.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-unknown-freebsd4.8</td>
+<td>BSD make, build in objdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00895.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-unknown-freebsd4.8</td>
+<td>BSD make, build in srcdir</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00903.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00908.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00872.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00890.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Debian sid, glibc 2.3.1, kernel 2.5.66</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01509.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 8.1, glibc 2.2.5, kernel 2.4.19</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01538.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-suse-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00863.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00896.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin6.3</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00858.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin6.6</td>
+<td>Mac OS X 10.2.6</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01553.html">3.3</a>;
+<br />Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01487.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00881.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00876.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00860.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>YellowDog 2.3, glibc 2.2.5, binutils 2.13.90.0.4, kernel 2.4.20</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01552.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00910.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00929.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00880.html">3.3</a>
+</td>
+</tr>
+
 </table>
 
 </body>
