Add a list of fixed ADA PRs, from Joe Buck.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -450,6 +450,7 @@ Detailed release notes for the GCC 3.3 release follow.
 <li><a href="http://gcc.gnu.org/PR7675">7675</a> ICE in <code>fixup_var_refs_1</code></li>
 <li><a href="http://gcc.gnu.org/PR7718">7718</a> 'complex' template instantiation causes ICE</li>
 <li><a href="http://gcc.gnu.org/PR8116">8116</a> (c++) ICE in member template function</li>
+<li><a href="http://gcc.gnu.org/PR8358">8358</a> (ada) Ada compiler accesses freed memory, crashes</li>
 <li><a href="http://gcc.gnu.org/PR8511">8511</a> (c++) ICE: (hopefully) reproducible cc1plus segmentation fault</li>
 <li><a href="http://gcc.gnu.org/PR8564">8564</a> (c++) ICE in <code>find_function_data</code>, in <code>function.c</code></li>
 <li><a href="http://gcc.gnu.org/PR8660">8660</a> (c++) template overloading ICE in <code>tsubst_expr</code>, in <code>cp/pt.c</code></li>
@@ -618,6 +619,14 @@ Detailed release notes for the GCC 3.3 release follow.
 <li><a href="http://gcc.gnu.org/PR9253">9253</a> on win32, <code>java.io.File.listFiles("C:\\")</code> returns pwd instead of the root content of C:</li>
 <li><a href="http://gcc.gnu.org/PR9254">9254</a> <code>java::lang::Object::wait(), threads-win32.cc</code> returns wrong return codes</li>
 <li><a href="http://gcc.gnu.org/PR9271">9271</a> Severe bias in <code>java.security.SecureRandom</code></li>
+</ul>
+
+<h4>Ada compiler and library</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR6767">6767</a> <code>make gnatlib-shared</code> fails on <code>-laddr2line</code></li>
+<li><a href="http://gcc.gnu.org/PR9911">9911</a> <code>gnatmake</code> fails to link when GCC configured with <code>--with-sjlj-exceptions=yes</code></li>
+<li><a href="http://gcc.gnu.org/PR10020">10020</a> Can't bootstrap gcc on AIX with Ada enabled</li>
+<li><a href="http://gcc.gnu.org/PR10546">10546</a> Ada tasking not working on Red Hat 9</li>
 </ul>
 
 <h4>preprocessor</h4>
