Add new entries for 3.3.
Bootstraps:

  i686-pc-linux-gnu (Red Hat 9, glibc 2.3.2)

Test results:

  hppa64-hp-hpux11.00
  i686-pc-linux-gnu
  i686-suse-linux-gnu
  mips-sgi-irix6.2
  mips-sgi-irix6.5
  sparc-sun-solaris2.7

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -79,6 +79,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa64-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00950.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.8</td>
 <td>GNU make, build in objdir</td>
 <td>Test results:
@@ -123,6 +131,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00948.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00945.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00890.html">3.3</a>
 </td>
@@ -138,9 +148,25 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 9, glibc 2.3.2</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01589.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 8.1, glibc 2.2.5, kernel 2.4.19</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01538.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-suse-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00967.html">3.3</a>
 </td>
 </tr>
 
@@ -149,6 +175,22 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00863.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.2</td>
+<td>test runs for -mabi=64 and -mips4</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00943.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>test runs for -mabi=64 and -mips4</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00942.html">3.3</a>
 </td>
 </tr>
 
@@ -193,6 +235,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>YellowDog 2.3, glibc 2.2.5, binutils 2.13.90.0.4, kernel 2.4.20</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01552.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>test runs for -m64, -fPIC, and -fpic</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00944.html">3.3</a>
 </td>
 </tr>
 
