--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -301,10 +301,26 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc64-sun-solaris2.7</td>
+<td>test runs for -m32, -fPIC, and -fpic</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00997.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc64-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00880.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-suse-linux-gnu</td>
+<td>test runs with and without -m32</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00996.html">3.3</a>
 </td>
 </tr>
 
