Fix markup. Minor changes to make future updates simpler.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -32,20 +32,18 @@ suite and automated regression testers</a> as well
 as <a href="benchmarks/">various benchmark suites and automated testers</a>
 to maintain and improve quality.</p>
 
+<dl>
 
 <!-- NOTE: Of the following four items, we always want to show exactly
-     three - either the first, second, and fourth, or the second, third,
+     three - either items 1, 2 and 4 or items 2, 3 and 4.
      and fourth.
 -->
 
 <!--
-<dl>
 <dt><strong>Active release branch:</strong>
-  will become <a href="gcc-3.3/index.html">GCC 3.3</a>
+  will become <a href="gcc-3.4/index.html">GCC 3.4</a>
 </dt><dd>
-  Prerelease Stage; non-documentation changes require
-  <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01430.html">approval by
-  the release manager</a>.
+  Bug fixes only.
 </dd>
 -->
 
@@ -68,6 +66,7 @@ to maintain and improve quality.</p>
   <a href="develop.html#stage1">Stage 1</a>;
   open for all maintainers.
 </dd>
+
 </dl>
 
 <hr />
