Avoid calling our bug tracking system by name and already link to Bugzilla for historical bugs.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -130,9 +130,9 @@ properly evaluate it:</p>
 <dd>
 For new features a description of the feature and your implementation.
 For bugs a description of what was wrong with the existing code, and a
-reference to any previous bug report (in the <a href="gnats.html">GCC
-GNATS database</a> or the <a
-href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs archives</a>) and any
+reference to any previous bug report (in the
+<a href="http://gcc.gnu.org/bugzilla/">GCC bug tracking system</a> or the
+<a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs archives</a>) and any
 existing testcases for the problem in the GCC testsuite.
 </dd>
 
