--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -55,6 +55,22 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alpha-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01096.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>alphaev6-dec-osf5.1</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++, ObjC, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01642.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>armv5l-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -66,6 +82,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>hppa-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01095.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00939.html">3.3</a>
 </td>
 </tr>
@@ -93,6 +110,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00950.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01094.html">3.3</a>
 </td>
 </tr>
 
@@ -129,9 +154,18 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-netbsdelf1.6.1</td>
+<td>NetBSD 1.6.1, GNU make</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01736.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01052.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00908.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00872.html">3.3</a>
 </td>
@@ -141,6 +175,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01114.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01023.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01017.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00948.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00945.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>,
@@ -153,6 +190,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>Debian sid, glibc 2.3.1, kernel 2.5.66</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01509.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.0, glibc 2.2.2, kernel 2.4.3</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01647.html">3.3</a>
 </td>
 </tr>
 
@@ -184,7 +229,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-suse-linux-gnu</td>
-<td>&nbsp;</td>
+<td>SuSE 8.2, glibc 2.3.2, kernel 2.4.20</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00967.html">3.3</a>
 </td>
@@ -252,6 +297,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01093.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01000.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00881.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00876.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00860.html">3.3</a>
@@ -263,6 +310,30 @@ Installing GCC: Final Installation</a>.</p>
 <td>YellowDog 2.3, glibc 2.2.5, binutils 2.13.90.0.4, kernel 2.4.20</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01552.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>s390-ibm-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01124.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>s390x-ibm-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01123.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01111.html">3.3</a>
 </td>
 </tr>
 
@@ -317,8 +388,17 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc64-unknown-linux-gnu</td>
+<td>Aurora SPARC Linux 1.0, binutils 2.14.90, glibc 2.2.5, kernel 2.4.20</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01118.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>x86_64-suse-linux-gnu</td>
-<td>test runs with and without -m32</td>
+<td>SuSE Linux Enterprise Server 8, glibc 2.2.5, kernel 2.4.19;
+<br />test runs with and without -m32</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00996.html">3.3</a>
 </td>
