Patch from Joe Buck adds two missing PRs pointed out by Pal Benko <benko@sztaki.hu>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -512,9 +512,11 @@ Detailed release notes for the GCC 3.3 release follow.
 <li><a href="http://gcc.gnu.org/PR3663">3663</a> G++ doesn't check access control during template instantiation</li>
 <li><a href="http://gcc.gnu.org/PR3797">3797</a> gcc fails to emit explicit specialization of a template member</li>
 <li><a href="http://gcc.gnu.org/PR3948">3948</a> Two destructors are called when no copy destructor is defined (ABI change)</li>
+<li><a href="http://gcc.gnu.org/PR4137">4137</a> Conversion operator within template is not accepted</li>
 <li><a href="http://gcc.gnu.org/PR4361">4361</a> bogus ambiguity taking the address of a member template</li>
 <li><a href="http://gcc.gnu.org/PR4802">4802</a> g++ accepts illegal template code (access to private member; DUP: <a href="http://gcc.gnu.org/PR5837">5837</a>)</li>
 <li><a href="http://gcc.gnu.org/PR4803">4803</a> inline function is used but never defined, and g++ does not object</li>
+<li><a href="http://gcc.gnu.org/PR5094">5094</a> Partial specialization cannot be friend?</li>
 <li><a href="http://gcc.gnu.org/PR5730">5730</a> complex&lt;double&gt;::norm() <code>--</code> huge slowdown from egcs-2.91.66</li>
 <li><a href="http://gcc.gnu.org/PR6713">6713</a> Regression wrt 3.0.4: g++ <code>-O2</code> leads to seg fault at run time</li>
 <li><a href="http://gcc.gnu.org/PR7015">7015</a> certain <code>__asm__</code> constructs rejected </li>
