--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -135,8 +135,8 @@ in the MAINTAINERS file in the GCC distribution.</p>
 
 <p>Also note that fixes for obvious typos in ChangeLog files, docs,
 web pages, comments and similar stuff need not be approved.  Just
-check in the fix.  We don't want to get overly anal-retentive about checkin
-policies.</p>
+check in the fix and copy it to <code>gcc-patches</code>.  We don't
+want to get overly anal-retentive about checkin policies.</p>
 
 <p>When you have checked in a patch exactly as it has been approved,
 you do not need to tell that to people -- including the approver.
