Use our new short reference to PRs instead of using gnatsweb.

--- a/htdocs/gcc-3.0/c99status.html
+++ b/htdocs/gcc-3.0/c99status.html
@@ -327,7 +327,7 @@ account of the standard version selected.</li>
 <li><code>__func__</code> should not take part in string
 concatenation, should be a distinct array from any identical string
 literal, and should have <code>const</code>-qualified element type.
-See <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&amp;pr=460&amp;database=gcc">PR
+See <a href="http://gcc.gnu.org/PR460">PR
 c/460</a> and testcases <code>c99-func-[234].c</code>.</li>
 
 <li>GCC doesn't have <code>wprintf</code>, <code>wscanf</code> and
