--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -7,7 +7,7 @@
 <body><!-- table of contents start -->
 <h1><a name="toc">Table of Contents</a></h1>
 <ul>
-<li><a href="#fix_bugs_in_the_gnats_database">Fix bugs in the GNATS database</a></li>
+<li><a href="#fix_bugs_in_bts">Fix bugs in our bug tracking system</a></li>
 <li><a href="#projects_for_beginner_gcc_hackers">Projects for beginner GCC hackers</a></li>
 <li><a href="#projects_for_the_c_preprocessor">Projects for the C preprocessor</a></li>
 <li><a href="#projects_for_the_gcc_web_pages">Projects for the GCC web pages</a></li>
@@ -78,9 +78,9 @@ exclusive.</a></li>
 
 <h1>GCC Projects</h1>
 
-<h2><a name="fix_bugs_in_the_gnats_database">Fix bugs in the GNATS database</a></h2>
-<p>You can investigate bugs in our <a href="../gnats.html">GNATS
-database</a> and attempt to fix them or see whether they still are
+<h2><a name="fix_bugs_in_bts">Fix bugs in our bug tracking system</a></h2>
+<p>You can investigate bugs in our <a href="../bugzilla.html">bug
+tracking system</a> and attempt to fix them or see whether they still are
 present in current GCC.</p>
 
 <h2><a name="projects_for_beginner_gcc_hackers">Projects for beginner GCC hackers</a></h2>
@@ -337,8 +337,8 @@ require changes elsewhere in the compiler to mark string constants
 with this information.</li>
 
 <li>Improve how types of format arguments (both expected types and
-actual argument types) are named in diagnostics; see <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&amp;pr=1027&amp;database=gcc">PR
-c/1027</a>.</li>
+actual argument types) are named in diagnostics; see
+<a href="http://gcc.gnu.org/PR1027">PR c/1027</a>.</li>
 
 <li>Include an option to warn for format extensions that have been
 obsoleted by standard C99 features.</li>
@@ -463,7 +463,7 @@ revision of POSIX; a script running <code>gcc -std=c99
 system compiler.</li>
 
 <li>Fix the issues discussed in <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&amp;pr=346&amp;database=gcc">PR
+href="http://gcc.gnu.org/PR346">PR
 other/346</a>.</li>
 
 </ul>
