Remove references to GNATS.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -78,7 +78,7 @@
 <ul>
   <li><b><a href="http://gcc.gnu.org/ml/gcc-prs/">gcc-prs</a></b>
   is a read-only, relatively high volume list which tracks problem reports
-  as they are entered into our GNATS database.</li>
+  as they are entered into our database.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
@@ -104,7 +104,7 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/java-prs/">java-prs</a></b>
   is a read-only list which tracks Java-related problem reports as
-  they are entered into our GNATS database.  Messages sent here are
+  they are entered into our database.  Messages sent here are
   also sent to <b>gcc-prs</b>.</li>
 
   <li><b>java-cvs</b>
@@ -117,9 +117,8 @@
 
 <ul>
   <li><b><a href="http://gcc.gnu.org/ml/libstdc++-prs/">libstdc++-prs</a></b>
-  was formerly used for problem reports in the libstdc++-v3 GNATS
-  database.  libstdc++-v3 now uses the GCC GNATS database and the
-  <b>gcc-prs</b> list.</li>
+  was formerly used by the libstdc++-v3 problem report database.
+  libstdc++-v3 now uses the main GCC database and the <b>gcc-prs</b> list.</li>
 </ul>
 
 <p>To post a message, just send mail to <i>listname</i><code>@gcc.gnu.org</code>.</p>
