Avoid referring to GNATS (or Bugzilla).

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -127,9 +127,9 @@ is nonzero.</p>
 
 <p>Where appropriate, testsuite entries should include comments giving
 their origin: the people who added them or submitted the bug report
-they relate to, possibly with a reference to a PR in GNATS.  There are
-some <a
-href="http://gcc.gnu.org/ml/gcc/2000-01/msg00593.html">copyright
+they relate to, possibly with a reference to a PR in our bug tracking
+system.  There are <a
+href="http://gcc.gnu.org/ml/gcc/2000-01/msg00593.html">some copyright
 guidelines</a> on what can be included in the testsuite.</p>
 
 <p>If a testcase itself is incorrect, but there's a possibility that an
