Update management for bugzilla changes, update reghunt to not refer to GNATS

--- a/htdocs/bugs/reghunt.html
+++ b/htdocs/bugs/reghunt.html
@@ -29,7 +29,7 @@ GCC on your platform.</p>
 
 <p>If you've got sufficient disk space available, keep old install
 tree around for use in finding small windows in which regressions
-occur.  Some people who do this regularly add information to GNATS
+occur.  Some people who do this regularly add information to Bugzilla
 about particular problem reports for regressions.</p>
 
 <p>Before you start your search, verify that you can reproduce the
