--- a/htdocs/rsync.html
+++ b/htdocs/rsync.html
@@ -44,8 +44,9 @@ including during the initial phase that is otherwise silent.</p>
 <pre>
  % rsync rsync://gcc.gnu.org/
 </pre>
-<p>Other interesting data, such as the GCC gnats files and the GCC ftp
-directories are also available.</p>
+
+<p>Other interesting data, such as the GCC ftp directories, is also
+available.</p>
 
 <h2>Using the local repository</h2>
 <p>Refer to <a href="cvs.html">CVS instructions</a> to check out your local
