Avoid referencing GNATS (or any specific bug tracking system for that matter).

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -969,8 +969,8 @@ only have to remember to update the documentation in one place.</p>
 
 <p>Work out what they refer to, if necessary by asking people who were
 involved in GCC development when those bugs were documented.  If no
-longer present, then remove them from the list; if still present, add
-them to GNATS or fix them.</p></li>
+longer present, then remove them from the list; if still present, file
+bug reports or fix them.</p></li>
 
 </ul>
 
