Avoid referencing GNATS.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -182,12 +182,11 @@
         the CFG.  This algorithm can be significantly faster and more
         space efficient than our older algorithm.</li>
     <li><code>gccbug</code> script provided to assist in submitting
-        bug reports to the GCC GNATS bug tracking database.  (Bug
-        reports previously submitted directly to the GCC mailing
-        lists, for which no GNATS bug tracking number has been
-        received, should be submitted again to the bug tracking
-        database using <code>gccbug</code> if you can reproduce the
-        problem with GCC 3.0.)</li>
+        bug reports to our bug tracking system.  (Bug reports previously
+        submitted directly to our mailing lists, for which you received
+        no bug tracking number, should be submitted again using
+        <code>gccbug</code> if you can reproduce the problem with GCC 3.0.)
+        </li>
     <li>The internal <code>libgcc</code> library is <a
         href="libgcc.html">built as a shared library</a> on systems
         that support it.</li>
