--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -38,29 +38,37 @@
          3.3 GNAT Reference Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gnat_rm.ps.gz">also
          in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gnat_ug_unx/">GCC
+         3.3 GNAT User's Guide</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gnat_ug_unx.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.3/fastjar/">GCC
+         GNU jar utilities</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.3/fastjar.ps.gz">also
+         in PostScript</a>)</li>
   </ul></li>
 
-  <li>GCC 3.2.2 manuals:
+  <li>GCC 3.2.3 manuals:
   <ul>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/gcc/">GCC
-         3.2.2 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/gcc.ps.gz">also
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/gcc/">GCC
+         3.2.3 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/gcc.ps.gz">also
          in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/g77/">GCC
-         3.2.2 G77 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/g77.ps.gz">also
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/g77/">GCC
+         3.2.3 G77 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/g77.ps.gz">also
          in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/gcj/">GCC
-         3.2.2 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/gcj.ps.gz">also
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/gcj/">GCC
+         3.2.3 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/gcj.ps.gz">also
          in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/cpp/">GCC 
-         3.2.2 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/cpp.ps.gz">also
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/cpp/">GCC 
+         3.2.3 CPP Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/cpp.ps.gz">also
          in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/gnat_rm/">GCC
-         3.2.2 GNAT Reference Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/gnat_rm.ps.gz">also
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/gnat_rm/">GCC
+         3.2.3 GNAT Reference Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2.3/gnat_rm.ps.gz">also
          in PostScript</a>)</li>
   </ul></li>
 
