Update information how to request CVS write access, especially if you already have access to sources.redhat.com.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -30,13 +30,16 @@ href="bugs/management.html">edit our bugs database</a>.</p>
 <hr />
 <h2><a name="authenticated">Authenticated access</a></h2>
 
-<p>Authenticated access is provided via the SSH protocol. Please
-provide us with your public key, which you can generate via the
-<code>ssh-keygen</code> program.  This will store your public key in
-the file <code>.ssh/identity.pub</code> in your home directory.
-Please use <a
+<p>We provide authenticated access via the SSH protocol.</p> 
+
+<p>If you already have an account on sources.redhat.com, please send
+email to <code>overseers(at)sources.redhat.com</code> with a request
+for access to the GCC repository.  Include the name of the person who
+is sponsoring your access.
+Else use <a
 href="http://sources.redhat.com/cgi-bin/pdw/ps_form.cgi">this form</a>
-to supply the file and your other details.</p>
+to supply your SSH public key (which you can generate via the
+<code>ssh-keygen</code> program) and other details.</p>
 
 <p>Once we have this information we will set up an account on
 <code>gcc.gnu.org</code> and inform you by mail.  At this point you
