--- a/htdocs/bugs/reghunt.html
+++ b/htdocs/bugs/reghunt.html
@@ -165,7 +165,7 @@ were added in December 2002).  When you have
 <h2><a name="test">Run the test</a></h2>
 
 <p>Assuming that there is a self-contained test for the bug, as there
-usually is for bugs reported via GNATS, write a small script to run it
+usually is for bugs reported via Bugzilla, write a small script to run it
 and to report whether it passed or failed.  If you're automating your
 search then the script should tell you whether the next compiler build
 should use earlier or later GCC sources.</p>
