Use gcc.gnu.org as a proper name, without <code>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -42,7 +42,7 @@ to supply your SSH public key (which you can generate via the
 <code>ssh-keygen</code> program) and other details.</p>
 
 <p>Once we have this information we will set up an account on
-<code>gcc.gnu.org</code> and inform you by mail.  At this point you
+gcc.gnu.org and inform you by mail.  At this point you
 should be able to check out a tree with CVS and add yourself to the
 MAINTAINERS file to test write access.  See <a
 href="#checkin">Checking in a change</a> for how to proceed with
@@ -60,7 +60,7 @@ cvs -z 9 -d :ext:<i>username</i>@gcc.gnu.org:/cvs/gcc co gcc
 </code></p></blockquote>
 
 <p>where <i>username</i> is your user name at
-<code>gcc.gnu.org</code>.  This will check out a new CVS tree that you
+gcc.gnu.org.  This will check out a new CVS tree that you
 should be able to work with in the normal fashion, including
 committing changes.</p>
 
