Avoid references to GNATS.  Properly use GCC instead of gcc.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -101,12 +101,10 @@ were not present in GCC 3.2.2.</p>
 <h3>Bug Fixes</h3>
 
 <p>This section lists the problem reports (PRs) from GCC's bug tracking
-system (GNATS) that are known to be fixed in the 3.2.2 release. This
+system that are known to be fixed in the 3.2.2 release. This
 list might not be complete (that is, it is possible that some PRs
-that have been fixed are not listed here).</p>
-
-<p>The sorting is slightly different from the GNATS categories, and some of
-the titles have been changed to make them more clear.</p>
+that have been fixed are not listed here), and some of the titles have been
+changed to make them more clear.</p>
 
 <h4>Internal Compiler Errors (multi-platform)</h4>
 <ul>
@@ -246,12 +244,10 @@ thus restores ABI-compatibility with previous releases (except GCC 3.2.1)
 on these platforms.</p>
 	
 <p>This section lists the problem reports (PRs) from GCC's bug tracking
-system (GNATS) that are known to be fixed in the 3.2.2 release. This
+system that are known to be fixed in the 3.2.2 release. This
 list might not be complete (that is, it is possible that some PRs
-that have been fixed are not listed here).</p>
-
-<p>The sorting is slightly different from the GNATS categories, and some of
-the titles have been changed to make them more clear.</p>
+that have been fixed are not listed here) and some of the titles have been
+changed to make them more clear.</p>
 
 <h4>Internal Compiler Errors (multi-platform)</h4>
 <ul>
@@ -391,7 +387,7 @@ system that
 are known to be fixed in the 3.2.1 release. This list might not be complete
 (that is, it is possible that some PRs that have been fixed are not listed
 here). As you can see, the number of bug fixes is quite large, so it is
-strongly recommended that users of earlier gcc 3.x releases upgrade to
+strongly recommended that users of earlier GCC 3.x releases upgrade to
 GCC 3.2.1.</p>
 
 <h4>Internal Compiler Errors (multi-platform)</h4>
