Avoid referencing GNATS; simplify.

--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -50,8 +50,7 @@ be completed before GCC 3.3 is released:</p>
 system that indicate a regression with respect to previous releases.</p>
 
 <p>Such PRs are marked as high-priority items, and every GCC maintainer
-with CVS and GNATS write access may set PRs indicating a regression to
-high-priority.</p>
+may set PRs indicating a regression to high-priority.</p>
 
 
 <h2>Platform Support</h2>
