Switch from GNATS to Bugzilla.

--- a/htdocs/gcc-3.3/gcj-status.html
+++ b/htdocs/gcc-3.3/gcj-status.html
@@ -10,10 +10,10 @@
 
 <h2>Bugs</h2>
 
-<p>We are tracking all bugs in Gnats.  Any bugs that we want to fix
-for the 3.3 release will be marked <em>high</em> priority.  You can
-see this list <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitext=&amp;arrivedafter=&amp;arrivedbefore=&amp;modifiedafter=&amp;modifiedbefore=&amp;closedafter=&amp;closedbefore=&amp;category=&amp;category=java&amp;category=libgcj&amp;synopsis=&amp;confidential=&amp;severity=&amp;priority=&amp;priority=high&amp;responsible=&amp;state=&amp;state=open&amp;state=analyzed&amp;ignoreclosed=Ignore%20Closed&amp;class=&amp;submitter_id=&amp;originator=&amp;release=&amp;columns=category&amp;columns=state&amp;columns=class&amp;columns=priority&amp;columns=responsible&amp;columns=last_modified&amp;columns=synopsis&amp;displaydate=Display%20Current%20Date&amp;cmd=submit%20query&amp;sortby=Last-Modified&amp;.cgifields=confidential&amp;.cgifields=state&amp;.cgifields=columns&amp;.cgifields=priority&amp;.cgifields=displaydate&amp;.cgifields=responsible&amp;.cgifields=class&amp;.cgifields=submitter_id&amp;.cgifields=severity&amp;.cgifields=ignoreclosed&amp;.cgifields=category">here</a>.</p>
+<p>We are tracking all bugs in Bugzilla.  Any bugs that we want to fix
+for the 3.3 release will be marked <em>high</em> priority (<a
+href="http://gcc.gnu.org/bugzilla/buglist.cgi?short_desc_type=allwordssubst&component=java&long_desc_type=substring&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&gcchost_type=allwordssubstr&gcchost=&gcctarget_type=allwordssubstr&gcctarget=&gccbuild_type=allwordssubstr&gccbuild=&keywords_type=allwords&keywords=&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=SUSPENDED&bug_status=WAITING&bug_status=REOPENED&bug_severity=critical&emailassigned_to1=1&emailtype1=substring&email1=&emailassigned_to2=1&emailreporter2=1&emailcc2=1&emailtype2=substring&bugidtype=include&cmdtype=doit&order=Bug+Number">see
+list</a>).
 
 
 <h2>Platforms</h2>
