--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -145,7 +145,7 @@ names.
  
  <li>m32r
   <br />Manufacturer: Mitsubishi
-  <br /><a href="http://www.mitsubishichips.com/products/mcu/products/32-bit/index.html">M32R/D Site</a>
+  <br /><a href="http://www.renesas.com/eng/products/mpumcu/32bit/m32r/">M32R Site</a>
   <br />GDB includes a CGEN generated simulator.
  </li>
  
