Fix markup, both in terms of XHTML-compliance and logical.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -115,18 +115,21 @@ release versions) should get "minor" severity.
 It should be noted in the comments that the error recovery fails.</p>
 
 <h2>Fields</h2>
-<a name="status"></a>
+
 <table border="1" cellpadding="4" summary="States">
 
 <tr align="center" valign="top">
-<th><h2>STATUS</h2></th> <th><h2>RESOLUTION</h2></th>
+<th><h2 id="status">STATUS</h2></th> <th><h2>RESOLUTION</h2></th>
 </tr>
-<tr VALIGN="top">
+
+<tr valign="top">
 <td>The <em>status</em> field indicates the general health of a bug. Only
 certain status transitions are allowed.</td>
 <td>The <em>resolution</em> field indicates what happened to this bug.</td>
 </tr>
-<tr VALIGN="top"><td>
+
+<tr valign="top"><td>
+
 <dl>
 <dt><b>UNCONFIRMED</b></dt>
 <dd>The PR has been filed and the responsible person(s) notified.</dd>
@@ -161,15 +164,15 @@ reproducible.  From here bugs are either marked <b>ASSIGNED</b>
 or <b>RESOLVED</b>.</dd>
 </dl>
 </td>
-</tr>
+
 <td>
-<dl>
-<dd> No resolution yet. All bugs which are in one of these "open" states
+No resolution yet. All bugs which are in one of these "open" states
 have the resolution set to blank. All other bugs
 will be marked with one of the following resolutions.</dd>
-</dl>
 </td>
-<tr VALIGN="top"><td>
+</tr>
+
+<tr valign="top"><td>
 <dl>
 <dt><b>RESOLVED</b></dt>
 <dd> A resolution has been found for this bug. The bug is either closed
@@ -237,5 +240,6 @@ prioritize their work to be done.  The available priorities are:
 <tr><th>P5</th><td>Least important</td></tr>
 </table>
 </td></tr></table>
+
 </body>
 </html>
